Fixed the white space?

--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,7 @@
 .SwitchDiv{
   min-height: 100%;
   max-height: 50vh;
-  background-color: #2A9988;
-  
+
 }
 
 
