--- a/src/HeaderComponent.css
+++ b/src/HeaderComponent.css
@@ -11,6 +11,10 @@
     color: white;
   }
 
+.homePageWrapper{
+  background-color: rgb(42,153,136);
+}
+
 .NavigationBar {
     background-color: rgb(42,153,136);
     min-width: 100vw;
